--- a/ConsoleBattleship/ConsoleBattleship/ConsoleBattleship.csproj
+++ b/ConsoleBattleship/ConsoleBattleship/ConsoleBattleship.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Data.SQLite.COre" Version="1.0.117" />
+  </ItemGroup>
+
 </Project>
