--- a/ConsoleBattleship/ConsoleBattleship/ConsoleBattleship.csproj
+++ b/ConsoleBattleship/ConsoleBattleship/ConsoleBattleship.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Pastel" Version="4.1.0" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
     <PackageReference Include="System.Data.SQLite.COre" Version="1.0.117" />
   </ItemGroup>
 
