--- a/ConsoleBattleship/ConsoleBattleship/ConsoleBattleship.csproj
+++ b/ConsoleBattleship/ConsoleBattleship/ConsoleBattleship.csproj
@@ -12,4 +12,10 @@
     <PackageReference Include="System.Data.SQLite.COre" Version="1.0.117" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Remove="Scores\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Scores\" />
+  </ItemGroup>
 </Project>
