--- a/ConsoleBattleship/ConsoleBattleship/ConsoleBattleship.csproj
+++ b/ConsoleBattleship/ConsoleBattleship/ConsoleBattleship.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Pastel" Version="4.1.0" />
     <PackageReference Include="System.Data.SQLite.Core" Version="1.0.117" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="UserService\" />
+  </ItemGroup>
 </Project>
